# helicopter

./: .gitignore  CMakeLists.txt  README.md  environment.yml  pyproject.toml
arduino/ir_controller/: ir_controller.ino
arduino/py_controller/: py_controller.hex  py_controller.ino
arduino/py_recorder/: py_recorder.hex  py_recorder.ino
arduino/remote_controller/: remote_controller.ino
arduino/serial_controller/: serial_controller.ino
assets/objects/camera/: camera.mtl
assets/objects/helicopter/: helicopter.mtl
assets/point_clouds/: blue_syma.npy  green_syma.npy
assets/simulation_params/blue_syma/: parameters.json
configs/atomic/: flight_visualizer.yaml  tracker.yaml
configs/fly/: hold_altitude.yaml
configs/tasks/: fly.yaml  measure.yaml  record_flight.yaml
cpp/src/: bindings.cpp  icp.hpp  kabsch.hpp  kd_tree.hpp  nanoflann.hpp  point_matcher.hpp
helicopter/: __init__.py  helicopter_cpp.pyi
helicopter/aircraft/: __init__.py  base.py
helicopter/cli/: __init__.py  entrypoint.py  run.py
helicopter/configuration/: __init__.py  configuration.py
helicopter/controller/: __init__.py  base.py  logger.py  manual.py  pid.py
helicopter/flight_states/: __init__.py  flight_states.py
helicopter/flightplan/: __init__.py  flightplan.py
helicopter/orchestrate/: base.py  run.py
helicopter/orchestration/: __init__.py  conductor.py  flightplan.py  oracle.py
helicopter/orchestration/manual_control/: manual.py
helicopter/remote/: __init__.py  base.py  control.py  record.py
helicopter/rl/: __init__.py  environment.py  model.py  sim.py
helicopter/simulation/: animator.py  pid.py  syma107g.py
helicopter/tasks/: __init__.py  base.py  fly.py  measure.py  record_flight.py
helicopter/utils/: __init__.py  arduino_loader.py  command.py  comms.py  constants.py  keyboard.py  models.py  point_queue.py  profiler.py  recording_asset.py  remote_control.py  remote_recorder.py  simulation_params.py
helicopter/vision/: __init__.py  d435i.py  sqrt_ukf.py  utils.py
helicopter/vision/measurement/: __init__.py  buffer.py  camera_state_handler.py  compiled.py  filter_functions.py  logger.py  madgwick.py  measure.py  measurement_tool.py  point_handler.py  run.py  scanner.py  ukf_factory.py  utils.py  vision_only.py
helicopter/vision/point_detection/: __init__.py  marker_detector.py  (+5 more)
helicopter/visualize/: __init__.py  aruco_registry.py  base.py  flight.py  marker_registry.py  measurement.py
notebooks/: analyze_logs.ipynb  analyze_logs_tracker.ipynb  animate_trajectory.ipynb  init_loading.ipynb  make_mesh.ipynb  measurement_cleanup.ipynb  point_correspondence.ipynb  simulation_fidelity.ipynb  tracker_matching.ipynb
(+44 files in other folders)
