[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "helicopter"
version = "0.1.0"
dependencies = [
    "numpy",
    "numpy-quaternion",
    "pandas",
    "matplotlib",
    "scipy",
    "jax",
    "ultralytics-opencv-headless",
    "opencv-python-headless",
    "matplotlib",
    "viser",
    "pyserial",
    "hydra-core",
    "click"]

[tool.scikit-build]
wheel.install-dir = "helicopter"
cmake.targets = ["helicopter_cpp"]

editable.mode = "inplace"